	- Change all hardcoded instances of 128 bytes to MAX_BUF_SIZE,
	  and #define MAX_BUF_SIZE as 128 in nano.h. (DLR)
	- Display the key to go to the previous strings in the
	  search/replace history as "^P".  This makes mouse clicks work
	  properly on it.  Changes to shortcut_init(), help_init(),
	  nanogetstr(), and do_statusbar_input(). (DLR)
- cut.c:
  cut_line()
	- Set placewewant properly after cutting a line, to avoid a
	  problem where the screen won't be updated if (a) we're not on
	  the first page when we cut the line, and (b) immediately after
	  we cut the line, we hit End to move to the end of the line
	  after it. (DLR)
- files.c:
  load_open_file()
	- Remove an unneeded clearok(FALSE). (DLR)
  get_next_filename()
	- Use an unsigned long instead of an int for the number
	  prepended to the filename. (DLR)
  write_file()
	- Since lineswritten is a size_t, print its value as an unsigned
	  long instead of an unsigned int. (DLR)
  cwd_tab_completion(), browser_init()
	- Rename variable next to nextdir to avoid confusion. (DLR)
  do_browser()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
- global.c:
  shortcut_init()
	- Move the "Refresh" and "Exit" shortcuts to the beginning of
	  the help browser shortcut list, for consistency. (DLR)
- nano.c:
  copy_filestruct()
	- Rename variable prev to copy to avoid confusion. (DLR)
  print1opt_full()
	- If desc should be empty, allow it to be NULL instead of
	  "", since the latter is not necessarily translated as "".
	  (DLR, found by Jordi)
  do_alt_speller()
	- Replace a set_modified() with SET(MODIFIED) to avoid an
	  unnecessary update, and remove an unneeded clearok(FALSE).
	  (DLR)
  do_output()
	- Properly allow wrapping when we insert a tab, for consistency.
	  (DLR)
- utils.c:
  num_of_digits()
	- Use a size_t instead of an int, and rename to digits(). (DLR)
- winio.c:
  statusq()
	- Rename variable which_history to history_list, for
	  consistency. (DLR)
  do_help()