@@ -11,6 +11,8 @@ CVS code -
 	  search/replace history as "^P".  This makes mouse clicks work
 	  properly on it.  Changes to shortcut_init(), help_init(),
 	  nanogetstr(), and do_statusbar_input(). (DLR)
+	- Update the Free Software Foundation's mailing address in
+	  various comments. (DLR)
 - cut.c:
   cut_line()
 	- Set placewewant properly after cutting a line, to avoid a
